# perdure

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  LANGUAGE.md
schemas/: guard-context.schema.json
scripts/: e2e.sh
src/: adopt.rs  agent.rs  ast.rs  builtins.rs  check.rs  cli.rs  diagnostics.rs  event.rs  guard.rs  interp.rs  lexer.rs  lib.rs  main.rs  parser.rs  patch.rs  program.rs  project.rs  render.rs  runner.rs  runtime.rs  schema.rs  shell.rs  source.rs  span.rs  store.rs  term.rs  token.rs  trace.rs  types.rs  value.rs
